--- a/index.html
+++ b/index.html
@@ -2695,7 +2695,7 @@ transition: 0.18s ease-in;
               <div class="ViiDe">
 
                 <h1 style="font-size: 2rem; text-align: left; color: #027bfdea;">What it means to live with a disability ?</h1>
-            <p>Living as a disabled person is a tough way to experience perpetual challenges including the ability to transform a negative energy from daily discriminations into a positive, impulsive and rational one. Some disabled people are believed to truly experience what combativity means.
+            <p>Living with a disability is tough but also a time to differently experience and learn through positive and negative sides of life. Including their ability to transform a negative energy from daily discriminations into a positive, impulsive and rational one, some disabled people are believed to really live what combativity exactly means.
               <br>
               <br>
               By the fact they are able to carry up a certain dynamic of courage and determination in order to reach their focuses is impressing, inspiring and hope-making.
