--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@
         row-gap: 0.39rem;
                  justify-content: space-between;
                  justify-items: center;
-                 background: #fff;
+                 background: rgba(223, 237, 255, 0.937);
                  width: 100%;
                  height: 98px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 1.98px solid #a3a6b0de;
+                 
           }
 
           .Joint-Point{
@@ -1761,11 +1761,10 @@ font-size: 19px;
           position: relative;
           width: 100%; 
           height: 65px; 
-          background: #fff;
+          background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%); 
           font-family: arial;
           font-size: 18px;
           color: #4b4d51df;
-          border: 0.11rem solid rgba(0, 0, 139, 0.893);
           border-top-left-radius: 1rem;
           border-top-right-radius: 1rem;
          
@@ -1777,8 +1776,8 @@ font-size: 19px;
           height: 65px; 
           animation: auto 12s ease-in infinite;
           animation-delay: 12s;
-          background: #fff;
-          color: #0747f6;
+          background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%); 
+          color: darkblue;
           text-align: center;
           border-bottom-left-radius: 1rem;
           border-bottom-right-radius: 1rem;
@@ -1811,8 +1810,8 @@ font-size: 19px;
           height: 65px; 
           animation: auto 12s ease-in infinite;
           animation-delay: 8s;
-          background: #fff;
-          color: #0747f6;
+          background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%); 
+          color: darkblue;
           text-align: center;
           border-bottom-left-radius: 1rem;
           border-bottom-right-radius: 1rem;
@@ -1847,8 +1846,8 @@ font-size: 19px;
           height: 65px; 
           animation: auto 12s ease-in infinite;
           animation-delay: 4s;
-          background: #fff;
-          color: #0747f6;
+          background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%); 
+          color: darkblue;
           text-align: center;
           border-bottom-left-radius: 1rem;
           border-bottom-right-radius: 1rem;
@@ -1906,7 +1905,7 @@ font-size: 19px;
           font-family: 'trebuchet ms';
           font-size: 16.5px; 
           text-align: left; 
-          line-height: 17.5px;
+          line-height: 18px;
           padding: 0.25rem;
           cursor: pointer;
           background: #fff;  
