--- a/index.html
+++ b/index.html
@@ -1625,8 +1625,8 @@ font-size: 19px;
           width: 100%;
           height: 70px;
           font-family: 'helvetica';
-          font-size: 1.8rem;
-          color: darkblue;
+          font-size: 1.74rem;
+          color: rgba(0, 0, 139, 0.919);
           margin-top: 3.5rem;
 
 }
