--- a/index.html
+++ b/index.html
@@ -2703,7 +2703,7 @@ transition: 0.18s ease-in;
               Over to socially experience few consideration and moslty regular discriminations, disabled people never give up but offer a typical path 
               of teaching and learning many lessons of life among others about what it means to be a differently-able person.
              
-              <img src="https://www.zupimages.net/up/23/18/huoj.jpg" alt="Friends in Wheelchairs" style="margin-top: 15px; margin-right: 15px; margin-bottom: 10px; width: 43%; height: 220px; border: 0.1px solid #8a8a8ada; padding: 2px; float: left; box-shadow: 0 0 9.5px 0.4px rgba(154, 154, 154, 0.897);">
+              <img src="https://www.zupimages.net/up/23/18/xuqq.jpg" alt="A Used Cratch" style="margin-top: 15px; margin-right: 15px; margin-bottom: 10px; width: 43%; height: 220px; border: 0.1px solid #8a8a8ada; padding: 2px; float: left; box-shadow: 0 0 9.5px 0.4px rgba(154, 154, 154, 0.897);">
               <br>
               Why are they often unintentionally considered to be a kind of social barometers by some people ? 
               <br>
