--- a/index.html
+++ b/index.html
@@ -1614,8 +1614,8 @@ font-size: 19px;
           width: 89.54%;
           height: 649px;
           background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%); 
-          border-top-left-radius: 34rem;
-          border-top-right-radius: 34rem;
+          border-top-left-radius: 35rem;
+          border-top-right-radius: 35rem;
           margin-top: 0.1rem;
         }
 .VD3i{
@@ -1625,9 +1625,9 @@ font-size: 19px;
           width: 100%;
           height: 70px;
           font-family: 'helvetica';
-          font-size: 1.95rem;
-          color: darkblue;
-          margin-top: 2.90rem;
+          font-size: 1.74rem;
+          color: rgba(0, 0, 139, 0.919);
+          margin-top: 4rem;
 
 }
 
@@ -1636,13 +1636,13 @@ font-size: 19px;
   justify-content: center;
   justify-items: center;
   position: relative;
-  width: 81%;
-  height: 400px;
+  width: 95%;
+  height: 390px;
   overflow: hidden;
   padding: 15px;  
-  border: 0.1rem solid rgba(0, 0, 139, 0.452);
-  box-shadow: 0 0 0.2rem 0.3px rgba(3, 3, 50, 0.898);
-  border-radius: 0.5rem;
+  border: 0.12rem solid rgba(0, 0, 139, 0.452);
+  box-shadow: 0 0 0.15rem 0.2px rgba(1, 1, 26, 0.92);
+  border-radius: 0.18rem;
   margin-top: 1rem;
 }
 
@@ -1651,13 +1651,13 @@ font-size: 19px;
   animation: auto 12s ease-in infinite;
   animation-delay: 12s;
   width: 100%;
-  height: 400px;
+  height: 390px;
   background: lightblue;
 }
 
 .VDI img{
   width: 100%;
-  height: 400px;
+  height: 390px;
 }
 
 @keyframes auto{
@@ -1684,7 +1684,7 @@ font-size: 19px;
 
 .VDII{
   width: 100%;
-  height: 400px;
+  height: 390px;
   position: absolute;
   animation: auto 12s ease-in infinite;
   animation-delay: 8s;
@@ -1693,7 +1693,7 @@ font-size: 19px;
 
 .VDII img{
   width: 100%;
-  height: 400px;
+  height: 390px;
 }
 @keyframes auto{
             0% {
@@ -1719,7 +1719,7 @@ font-size: 19px;
 
 .VDIII{
   width: 100%;
-  height: 400px;
+  height: 390px;
   position: absolute;
   animation: auto 12s ease-in infinite;
   animation-delay: 4s;
@@ -1728,7 +1728,7 @@ font-size: 19px;
 
 .VDIII img{
   width: 100%;
-  height: 400px;
+  height: 390px;
 }
 @keyframes auto{
             0% {
@@ -2703,7 +2703,7 @@ transition: 0.18s ease-in;
               Over to socially experience few consideration and moslty regular discriminations, disabled people never give up but offer a typical path 
               of teaching and learning many lessons of life among others about what it means to be a differently-able person.
              
-              <img src="https://www.zupimages.net/up/23/18/huoj.jpg" alt="Friends in Wheelchairs" style="margin-top: 15px; margin-right: 15px; margin-bottom: 10px; width: 43%; height: 220px; border: 0.1px solid #8a8a8ada; padding: 2px; float: left; box-shadow: 0 0 9.5px 0.4px rgba(154, 154, 154, 0.897);">
+              <img src="https://www.zupimages.net/up/23/18/xuqq.jpg" alt="A Used Cratch" style="margin-top: 15px; margin-right: 15px; margin-bottom: 10px; width: 43%; height: 220px; border: 0.1px solid #8a8a8ada; padding: 2px; float: left; box-shadow: 0 0 9.5px 0.4px rgba(154, 154, 154, 0.897);">
               <br>
               Why are they often unintentionally considered to be a kind of social barometers by some people ? 
               <br>
@@ -2848,7 +2848,7 @@ transition: 0.18s ease-in;
               <b> 2. N'Yiki</b> is meaning: <b style="color: rgb(37, 66, 195); font-size: 16px;">Getting up</b>
               </div>
 
-              <a href="#">
+              <a href="file:///C:/Users/User/Documents/TIKINYIKI/bu/Tik-Yik.htmlgit">
                 <div class="BA">
                 Learn More...
               </div>
