--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             background: transparent;
             font-family: 'trebuchet ms';
             font-size: 1.77rem;
-            color: darkblue;
+            color: #000;
             margin-top: 1.9rem;
           }
           
@@ -1018,7 +1018,7 @@ hr{
   color:rgb(7, 7, 85);
   padding: 4px;
   margin-top: -6px;
-  margin-left: 10.9rem;
+  margin-left: 11rem;
 }
 .TYK1:hover{
   transform: rotate(360deg);
