--- a/index.html
+++ b/index.html
@@ -883,8 +883,8 @@ hr{
 .k-image{
     position: relative;
     overflow: hidden;
-    width: 680px; 
-    height: 390px;
+    width: 670px; 
+    height: 380px;
     background: rgba(230, 230, 230, 0.961);
     font-family: 'verdana';
     font-size: 12px;
@@ -894,8 +894,8 @@ hr{
 }
 
 .k1-image img{
-    width: 680px; 
-    height: 390px;
+    width: 670px; 
+    height: 380px;
     animation: auto1 12s infinite ease-in;
     animation-delay: 4s;
     position: absolute;
@@ -909,8 +909,8 @@ hr{
 }
 
 .k2-image img{
-    width: 680px; 
-    height: 390px;
+    width: 670px; 
+    height: 380px;
     animation: auto2 12s infinite ease-in;
     animation-delay: 12s;
     position: absolute;
@@ -923,8 +923,8 @@ hr{
     100%{left: -100%;}
 }
 .k3-image img{
-    width: 680px; 
-    height: 390px;
+    width: 670px; 
+    height: 380px;
     animation: auto3 12s infinite ease-in;
     animation-delay: 8s;
     position: absolute;
@@ -944,16 +944,16 @@ hr{
     justify-items: center;
     justify-content: center;
     text-align: left;
-    width: 777px;
+    width: 745px;
     margin-top: 0.5rem;
-    margin-left: 1rem;
     font-family: georgia;
+    line-height: 28px;
 }
 
 
 .k2 img{
     width: 740px ; 
-    height:710px;
+    height:705px;
     padding: 2px 2px;
     margin-top: -1%;
 }
