--- a/index.html
+++ b/index.html
@@ -979,12 +979,12 @@ hr{
 .k3{
     display: grid;
     gap: 5px;
-    background: #00f;
+    background: transparent;
     justify-content: left;
     justify-items: center;
     text-align: left;
     width: 750px ; 
-    height: 548px;
+    height: 560px;
 }
 .k3 img{
     width: 735px ; 
