--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@ hr{
     justify-items: center;
     text-align: left;
     width: 750px ; 
-    height: 560px;
+    height: 558px;
 }
 .k3 img{
     width: 735px ; 
@@ -1315,18 +1315,17 @@ function myFunction() {
         <b style="font-size: 26px; font-family:'georgia'; color: rgb(42, 61, 172); text-align: justify; line-height: 25px;">Having the right to get educated, carried and obviously be safe from food insecurity is part of the vision that Tiki Yiki is projecting on.</b>
     </p>
 </div>
-    <br>
+
 <div class="k3">
     <figure>
         <img src="https://www.zupimages.net/up/22/21/3bad.jpg" alt="Teaching Kids in Ziniare [Burkina Faso]">
-    <figcaption style=" color:rgb(103, 103, 103); font-family: 'verdana'; font-size: 15px; text-align: left;">
+    <figcaption style=" color:rgb(103, 103, 103); font-family: 'verdana'; font-size: 15px; text-align: left; margin-top: -6px;">
         Teaching To Improve Education in the City of Ziniare <a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="_blank">[Burkina Faso]</a>
     </figcaption>
 </figure>
 </div>
 
     <div class="k1">
-        <br>
 
         <p><hr style="color: rgb(13, 31, 136); justify-self: center;"> 
         <span style="background: transparent; font-family: 'georgia'; font-size: 30px; color: rgb(42, 61, 172); text-align: left;"><strong>The Climate Change Approach</strong></span>
