--- a/index.html
+++ b/index.html
@@ -754,8 +754,8 @@
         height: 580px;
         position: relative;
         font-family: 'trebuchet ms';
-        font-size: 19px;
-        background: -webkit-linear-gradient(rgb(0, 0, 0), rgba(8, 8, 8, 0.914));
+        font-size: 16px;
+        background: -webkit-linear-gradient(rgb(0, 0, 0), rgba(45, 45, 45, 0.914));
         background-size: cover;
         object-fit:cover;
         color: #fff;
@@ -763,9 +763,9 @@
         flex-direction: column;
         align-items: center;  
         text-align: center; 
-        border-top: 0.5px solid #fff;
-       
+        border-top: 0.5px solid #fff;   
     }
+
     h1{
     font-family: 'verdana';
     font-size: 17.8px;
@@ -1020,7 +1020,19 @@ hr{
     color: rgb(1, 93, 1);
     transition: 0.11s linear;
 }
-
+.FTR{
+  width: 29%; 
+  height: 60%; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  background: transparent; 
+  border: 0.2rem solid #fff; 
+  border-radius: 50%; 
+  font-family: 'helvetica'; 
+  font-size: 19px; 
+  line-height: 35px;
+}
 </style>
 
     <title>Tik-Yik.html</title>                              
@@ -1425,7 +1437,7 @@ function myFunction() {
 
 <div class="footer">
    
-    <div class="FTR" style="width: 29%; height: 60%; display: flex; justify-content: center; align-items: center; background: transparent; border: 0.2rem solid #fff; border-radius: 50%; font-family: 'helvetica'; font-size: 21px; line-height: 36px;">
+    <div class="FTR">
     Copyright © Tiki N'Yiki 2023 
     <br>
     <br>
