--- a/index.html
+++ b/index.html
@@ -43,16 +43,13 @@
 
 .top-container{
         display: grid;
-        grid-template-columns: 1fr 0.5fr 0.5fr 2fr;
+        grid-template-columns: 0.5fr 0.75fr 0.25fr 1.5fr;
         justify-content: center;
         justify-items: center;
         width: 100%;
         height: 1rem;
-        padding: 0.3rem;
         object-fit: cover;
         font-family: 'georgia';
-        font-size: 0.72rem;
-        color: gold;
         background: transparent;
     }
 
@@ -1139,7 +1136,7 @@ function myFunction() {
 
         <a href="https://disabilitycreditcanada.com/top-16-famous-people-with-disabilities/" target="_blank">
         <div class="Translator">
-          Famous Disabled People
+          Famous Disabled
         </div>
       </a>
       
