--- a/index.html
+++ b/index.html
@@ -194,12 +194,12 @@
             justify-content: left;
             align-items: center;
             width: 100%; 
-            height: 75px; 
-            background: transparent;
+            height: 150px; 
+            background: rgb(22, 129, 187);
             font-family: 'trebuchet ms';
-            font-size: 1.77rem;
-            color: #000;
-            margin-top: 1.9rem;
+            font-size: 1.7rem;
+            color: #fff;
+            
           }
           
           .Joint-Point{
