--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     .reader{
       display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1.5fr 1fr;
         column-gap: 2rem;
         border-bottom: 0.2rem solid #fff;
         color: #0e28e6f0;  
@@ -78,9 +78,9 @@
       height: 1.5rem;
       font-family: georgia;
       font-size: 15px;
-      color: rgba(1, 80, 207, 0.979);
+      color: #000;
       padding: 5px;
-      margin-top: -1.2rem;
+      margin-top: -1rem;
     }
 
     .Translator:hover{
@@ -98,9 +98,9 @@
       height: 1.5rem;
       font-family: georgia;
       font-size: 15px;
-      color: rgba(1, 80, 207, 0.979);
+      color: #000;
       padding: 5px;
-      margin-top: -1.2rem;
+      margin-top: -1rem;
     }
 
     .BF:hover{
@@ -119,9 +119,9 @@
       height: 1.5rem;
       font-family: georgia;
       font-size: 15px;
-      color: rgba(1, 80, 207, 0.979);
+      color: #000;
       padding: 5px;
-      margin-top: -1.2rem;
+      margin-top: -1rem;
     }
 
     .Asso:hover{
@@ -140,9 +140,9 @@
       height: 1.5rem;
       font-family: georgia;
       font-size: 15px;
-      color: rgba(1, 80, 207, 0.979);
+      color: #000;
       padding: 5px;
-      margin-top: -1.2rem;
+      margin-top: -1rem;
     }
 
     .datime:hover{
@@ -181,7 +181,7 @@
   color:rgb(7, 7, 85);
   padding: 4px;
   margin-top: -6px;
-  
+  margin-left: 2rem;
 }
 .TYK1:hover{
   transform: rotate(360deg);
