--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,7 @@ function myFunction() {
 
         <a href="#" target="blank">
         <div class="myDiv">
-          <b>Foundation Tiki N'Yiki</b>
+          <b>Tiki N'Yiki</b>
         </div>
             </a>
 
@@ -1201,12 +1201,6 @@ function myFunction() {
             <a href="https://www.wfp.org/countries/burkina-faso" target="blank"> 
                 <div  class="myDiv3">
                   <b>Food Safety</b>
-                </div>
-            </a>
-
-            <a href="#" target="blank"> 
-                <div  class="myDiv4">
-                  <b>Painting</b>
                 </div>
             </a>
 
