--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             height: 40px;
             width: 100%;
             margin-top: 0.5rem;
-            color: rgba(57, 57, 212, 0.906);
+            color: rgb(29, 63, 255);
             background: transparent;
           }
 
@@ -244,7 +244,7 @@
             cursor: pointer;
             font-family: georgia;
             margin-top: 0.5rem;
-            color: rgba(57, 57, 212, 0.906);
+            color: rgb(29, 63, 255);
             background: transparent;
           }
 
@@ -265,7 +265,7 @@
             cursor: pointer;
             font-family: georgia;
             margin-top: 0.5rem;
-            color: rgba(57, 57, 212, 0.906);
+            color: rgb(29, 63, 255);
             background: transparent;
           }
 
@@ -286,7 +286,7 @@
             cursor: pointer;
             font-family: georgia;
             margin-top: 0.5rem;
-            color: rgba(57, 57, 212, 0.906);
+            color: rgb(29, 63, 255);
             background: transparent;
           }
 
@@ -307,7 +307,7 @@
             cursor: pointer;
             font-family: georgia;
             margin-top: 0.5rem;
-            color: rgba(57, 57, 212, 0.906);
+            color: rgb(29, 63, 255);
             background: transparent;
           }
 
