--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             cursor: pointer;
             font-family: georgia;
             margin-top: 0.5rem;
-            color: rgba(57, 57, 212, 0.906);
+            color: rgb(29, 63, 255);
             background: transparent;
           }
 
