--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 .top-container{
         display: grid;
-        grid-template-columns: 0.5fr 0.75fr 0.25fr 1.5fr;
+        grid-template-columns: 0.5fr 0.75fr 0.5fr 1.5fr;
         justify-content: center;
         justify-items: center;
         width: 100%;
@@ -56,8 +56,6 @@
     .reader{
       display: grid;
         grid-template-columns: 2fr 2fr;
-        
-        border-bottom: 0.2rem solid #fff;
         color: #0e28e6f0;  
         font-family: 'georgia';
         font-size: 0.8rem; 
@@ -66,7 +64,7 @@
         width: 100%;
         height: 0.1rem;
         word-spacing: 1px;
-        
+        border-bottom: 0.16rem solid rgb(22, 129, 187);
     }
 
     .Translator{
