--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
   font-size: 9px;
   font-family: 'arial black';
   border-radius: 50%;
-  background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%); 
+  background: -webkit-linear-gradient(#ff3006 0%,#ff0 100%); 
   border: 0.1rem solid #4b4b4bf4;
-  color:rgb(7, 7, 85);
+  color:darkblue;
   padding: 4px;
   margin-top: -4px;
   margin-left: 2rem;
