--- a/index.html
+++ b/index.html
@@ -1016,17 +1016,19 @@ hr{
     transition: 0.11s linear;
 }
 .FTR{
-  width: 40%; 
-  height: 65%; 
+  width: 45%; 
+  height: 60%; 
   display: flex; 
+  position: relative;
+  flex-direction: column;
   justify-content: center; 
   align-items: center; 
   background: transparent; 
   border: 0.2rem solid #fff; 
   border-radius: 50%; 
   font-family: 'helvetica'; 
-  font-size: 19px; 
-  line-height: 35px;
+  font-size: 20px; 
+  line-height: 30px;
 }
 </style>
 
