--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       height: 1.5rem;
       font-family: georgia;
       font-size: 15px;
-      color: #000;
+      color: #fff;
       padding: 5px;
       margin-top: -1rem;
     }
@@ -96,7 +96,7 @@
       height: 1.5rem;
       font-family: georgia;
       font-size: 15px;
-      color: #000;
+      color: #fff;
       padding: 5px;
       margin-top: -1rem;
     }
@@ -117,7 +117,7 @@
       height: 1.5rem;
       font-family: georgia;
       font-size: 15px;
-      color: #000;
+      color: #fff;
       padding: 5px;
       margin-top: -1rem;
     }
@@ -138,7 +138,7 @@
       height: 1.5rem;
       font-family: georgia;
       font-size: 15px;
-      color: #000;
+      color: #fff;
       padding: 5px;
       margin-top: -1rem;
     }
@@ -153,14 +153,14 @@
       grid-template-rows: 0.4fr 0.5fr 0.5fr 0.5fr;
                  justify-content: center;
                  justify-items: center;
-                 background: #fff;
+                 background: #ae0d45fe;
                  width: 100%;
                  height: 102px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.55rem solid rgba(0, 191, 255, 0.985);
+                 border-bottom: 0.5rem solid rgba(32, 111, 201, 0.99);
                  
           }
           .TYK1{
@@ -179,7 +179,7 @@
   color:darkblue;
   padding: 4px;
   margin-top: -4px;
-  margin-left: 2rem;
+  margin-left: 1rem;
 }
 .TYK1:hover{
   transform: rotate(360deg);
@@ -219,13 +219,13 @@
             height: 40px;
             width: 100%;
             margin-top: 0.5rem;
-            color: rgb(29, 63, 255);
+            color: rgb(6, 197, 255);
             background: transparent;
           }
 
           .myDiv:hover{
-            border-bottom: 0.8rem solid rgb(29, 63, 255);
-            color: rgb(29, 63, 255);
+            border-bottom: 0.8rem solid rgba(6, 180, 255, 0.985);
+            color: rgba(6, 180, 255, 0.985);
             transition: 0.15s ease-in;
       
           }
@@ -241,13 +241,13 @@
             cursor: pointer;
             font-family: georgia;
             margin-top: 0.5rem;
-            color: rgb(29, 63, 255);
+            color: rgb(6, 197, 255);
             background: transparent;
           }
 
           .myDiv1:hover{
-      border-bottom: 0.8rem solid rgb(255, 4, 0);
-      color: rgb(255, 4, 0);
+      border-bottom: 0.8rem solid rgb(255, 34, 30);
+      color: rgb(255, 34, 30);
       transition: 0.15s ease-in;
           }
 
@@ -262,13 +262,13 @@
             cursor: pointer;
             font-family: georgia;
             margin-top: 0.5rem;
-            color: rgb(29, 63, 255);
+            color: rgb(6, 197, 255);
             background: transparent;
           }
 
           .myDiv2:hover{
-            border-bottom: 0.8rem solid rgb(172, 29, 172);
-      color: rgb(172, 29, 172);
+            border-bottom: 0.8rem solid #fff;
+      color: #fff;
       transition: 0.15s ease-in;
           }
 
@@ -283,7 +283,7 @@
             cursor: pointer;
             font-family: georgia;
             margin-top: 0.5rem;
-            color: rgb(29, 63, 255);
+            color: rgb(6, 197, 255);
             background: transparent;
           }
 
@@ -304,7 +304,7 @@
             cursor: pointer;
             font-family: georgia;
             margin-top: 0.5rem;
-            color: rgb(29, 63, 255);
+            color: rgb(6, 197, 255);
             background: transparent;
           }
 
@@ -325,13 +325,13 @@
             cursor: pointer;
             font-family: georgia;
             margin-top: 0.5rem;
-            color: rgb(29, 63, 255);
+            color: rgb(6, 197, 255);
             background: transparent;
           }
 
           .myDiv6:hover{
-            border-bottom: 0.8rem solid rgb(14, 158, 45);
-      color: rgb(14, 158, 45);
+            border-bottom: 0.8rem solid yellow;
+      color: yellow;
       transition: 0.15s ease-in;
           }
 
