--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 .top-container{
         display: grid;
-        grid-template-columns: 0.5fr 0.45fr 0.45fr 1.6fr;
+        grid-template-columns: 0.75fr 0.45fr 0.45fr 1.8fr;
         justify-content: center;
         justify-items: center;
         width: 100%;
@@ -145,21 +145,21 @@
     .datime:hover{
       transition: 0.3s ease-in;
       width: 100%;
-      color: #ff5656;
+      color: #3d0909;
     }
 
     .navbar{display: grid;
       grid-template-rows: 0.4fr 0.5fr 0.5fr 0.5fr;
                  justify-content: center;
                  justify-items: center;
-                 background: #bc1a53fd;
+                 background: #b21a4ffe;
                  width: 100%;
-                 height: 102px;
+                 height: 96px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.4rem solid rgba(32, 111, 201, 0.99);
+                 border-bottom: 0.35rem solid rgba(29, 111, 205, 0.997);
                  
           }
           .TYK1{
@@ -177,7 +177,7 @@
   border: 0.1rem solid #4b4b4bf4;
   color:darkblue;
   padding: 4px;
-  margin-top: -10px;
+  margin-top: -14px;
   margin-left: -1rem;
 }
 .TYK1:hover{
@@ -217,7 +217,6 @@
             font-size: 19px;
             height: 40px;
             width: 100%;
-            margin-top: 0.5rem;
             color: rgb(6, 197, 255);
             background: transparent;
           }
@@ -239,7 +238,6 @@
             font-size: 19px;
             cursor: pointer;
             font-family: georgia;
-            margin-top: 0.5rem;
             color: rgb(6, 197, 255);
             background: transparent;
           }
@@ -260,7 +258,6 @@
             font-size: 19px;
             cursor: pointer;
             font-family: georgia;
-            margin-top: 0.5rem;
             color: rgb(6, 197, 255);
             background: transparent;
           }
@@ -281,7 +278,6 @@
             font-size: 19px;
             cursor: pointer;
             font-family: georgia;
-            margin-top: 0.5rem;
             color: rgb(6, 197, 255);
             background: transparent;
           }
@@ -302,7 +298,6 @@
             font-size: 19px;
             cursor: pointer;
             font-family: georgia;
-            margin-top: 0.5rem;
             color: rgb(6, 197, 255);
             background: transparent;
           }
@@ -323,7 +318,6 @@
             font-size: 19px;
             cursor: pointer;
             font-family: georgia;
-            margin-top: 0.5rem;
             color: rgb(6, 197, 255);
             background: transparent;
           }
