--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.35rem solid rgba(29, 111, 205, 0.997);
+                 border-bottom: 0.17rem solid rgba(27, 97, 177, 0.997);
+                 box-shadow: 0 2px 0.5rem 0.2px rgba(11, 29, 92, 0.919);
                  
           }
           .TYK1{
