--- a/index.html
+++ b/index.html
@@ -1232,7 +1232,7 @@ function myFunction() {
         <div class="k1">
             <br>
             <span style=" background: transparent; align-items: center; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: left;">
-                <strong>Etymology and Meaning of Tiki N'Yiki</strong>
+                <strong>Tiki N'Yiki: Etymology and Meaning</strong>
             </span>
               
                 </div>
@@ -1295,7 +1295,7 @@ function myFunction() {
              <p>
               <br>In <a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="blank">Burkina Faso</a>, despite the increasing number of the population of disabled people (From polio or other diseases and elders), we are still living sometimes scenarios where disabled people are completely underestimated. In the civil code few policies are set nationwide to value and protect the rights of that social component in inclusive way. And those policies that have been implemented never practically get set up. They (policies ) have been limited only to theorical texts and empty speeches. How much time should the disabled population wait before totally grabbing what are called their rights? The right to live decently even the disability?  The state of inclusion for disabled children is still stammering and unexistant in some regions around Africa. Culminated situation as reject hit regularly many disabled people who are countlessly experiencing in many ways discriminations, social injustice because first of all their disabilities and second the mentalities that are underestimating disabled people. There is a big concern about understanding, accepting, socially including and helping people with disabilities. 
                 
-    Therefore living with disability in the societies with such mentalities is really and perpetually threatening no matter the gender in terms of having acceptable quality of life. 
+    Therefore living with disability in societies with such mentalities is really and perpetually threatening no matter the gender in terms of having an inclusive quality of life. 
     Some of those disabled people feel sometimes like second-class citizens and they can meet no opportunities because they're being discriminated and forgotten. The fact that people who supposed to get support have come to be forgotten is unbelievably heartbreaking. It seems to be a social mistake and should immediately be fought. 
     <br><br>
     Then any project in the future for disabled people will be eased, rise optimism, hope and bring positive change to disabled population than the fear and social discriminations they're experiencing on a daily basis. Disabled kids have to be promoted by inclusion, so that they can meet some opportunities and get a certain autonomy or semi-autonomy in the future. These are crucial goals Tiki Yiki focuses on to be able to accompaign especially disabled kids who need to reach their full <a href="https://www.independentliving.org/docs4/lagadien.html" target="blank">potentials</a> but are generally isolated because of social discriminations.<br><br>
@@ -1317,7 +1317,7 @@ function myFunction() {
 </strong>
 </span>
     <br>
-    <br>One of the common characteristics of African countries is that they do not sufficiently have adapted and coordinated services to support education and inclusion of people living with disabilities in general but especially to disabled children. And this makes them excluded from a social participation to the development. They are still put away from the community.   
+    <br>One of the common characteristics of African countries about disability is not only they are daily stigmatised, but they are also missing basic, adapted and coordinated services. How many African schools are equiped with ramps in order to ease the accessibility for disabled students? It's not clear to tell the right figure but any statistic will hightlight the deep necessity to doing more for disabled people in terms of getting them included. Otherwise some are excluded from a participative development. Some of them have been put away from the community.   
     It's unclear that living in countries with non inclusive mentalities, disabled kids will be easily included as kids like others.
     <br>
 
