--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.12rem solid #f9f9f9d1;
+                 border-bottom: 0.12rem solid #000;
                  box-shadow: 0 2px 0.4rem 0.2px rgba(11, 28, 89, 0.847);
                  
           }
