--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         width: 100%;
         height: 0.1rem;
         word-spacing: 1px;
-        border-bottom: 0.3rem solid rgba(22, 129, 187, 0.996);
+        border-bottom: 0.3rem solid rgba(20, 120, 174, 0.996);
     }
 
     .Translator{
@@ -159,8 +159,8 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.16rem solid rgba(0, 3, 15, 0.913);
-                 box-shadow: 0 2px 0.47rem 0.2px rgba(4, 14, 52, 0.913);
+                 border-bottom: 0.16rem solid rgba(1, 7, 28, 0.935);
+                 box-shadow: 0 2px 0.48rem 0.2px rgba(2, 9, 36, 0.913);
                  
           }
           .TYK1{
@@ -850,15 +850,18 @@ hr{
     justify-content: center;
     align-items: left;
     background: #f9f9f9fb;
-    width: 86%;
+    width: 89%;
     height: auto;
     font-family: 'verdana';
     color: rgb(57, 57, 57);
     font-size: 17.5px;
     text-align: left;
-    padding: 1rem;
+    padding: 2rem;
     line-height: 22px;
+    border: 0.11rem solid rgba(4, 184, 255, 0.878);
     border-top: none;
+    border-bottom-left-radius: 1.5rem;
+    border-bottom-right-radius: 1.5rem;
 }
 .content1 a:hover{
     color: red;
