--- a/index.html
+++ b/index.html
@@ -852,12 +852,12 @@ hr{
     background: #f9f9f9fb;
     width: 89%;
     height: auto;
-    font-family: 'verdana';
-    color: rgb(57, 57, 57);
+    font-family: 'helvetica';
+    color: rgb(56, 56, 56);
     font-size: 17.5px;
+    line-height: 26px;
     text-align: left;
     padding: 2rem;
-    line-height: 22px;
     border: 0.11rem solid rgba(4, 184, 255, 0.878);
     border-top: none;
     border-bottom-left-radius: 1.5rem;
@@ -963,9 +963,9 @@ hr{
     text-align: justify;
     width: 75%;
     margin-top: 0.5rem;
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 26px;
+    font-family: helvetica;
     font-size: 17.5px;
+    line-height: 28px;
 }
 .k1 img{
   padding: 5px;
