--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@ hr{
     flex-direction: column;
     width:100%;
     height: auto;
-    background: #f9f9f9fb;
+    background: #fff;
     justify-content: center;
     align-items: center
     
@@ -851,7 +851,7 @@ hr{
     flex-direction: column;
     justify-content: center;
     align-items: left;
-    background: #f9f9f9fb;
+    background: #ebebeba3;
     width: 89%;
     height: auto;
     font-family: 'helvetica';
@@ -860,8 +860,6 @@ hr{
     line-height: 26px;
     text-align: left;
     padding: 2rem;
-    border: 0.11rem solid rgba(4, 184, 255, 0.878);
-    border-top: none;
     border-bottom-left-radius: 1.5rem;
     border-bottom-right-radius: 1.5rem;
 }
