--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@ hr{
     flex-direction: column;
     justify-content: center;
     align-items: left;
-    background: #f9f9f9f5;
+    background: #fafafaed;
     width: 89%;
     height: auto;
     font-family: 'helvetica';
@@ -1356,7 +1356,7 @@ certain autonomy or semi-autonomy in the future. These are crucial goals Tiki N'
   <br>
   <br>
         <b>
-     <a href="file:///C:/Users/User/Documents/education.html"  target="blank">1. Education</a>
+     <a href="https://www.education.gov.bf/accueil"  target="blank">1. Education</a>
          <br>
      <a href="file:///C:/Users/User/Documents/Health-Care.html" target="blank">2. Health Care</a>
          <br>
