--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@ hr{
 
 }
 ::-webkit-scrollbar-track-piece{
-    background: rgba(190, 190, 190, 0.884);
+    background: rgba(222, 222, 222, 0.884);
 }
 ::-webkit-scrollbar-thumb{
     background: rgb(119, 119, 119);
@@ -851,8 +851,8 @@ hr{
     flex-direction: column;
     justify-content: center;
     align-items: left;
-    background: #f5f5f5d6;
-    width: 90%;
+    background: #f1f1f1df;
+    width: 93%;
     height: auto;
     font-family: 'helvetica';
     color: rgb(56, 56, 56);
@@ -900,6 +900,7 @@ hr{
     font-size: 12px;
     color:#000;
     margin-top: 2.5%; 
+   border-top-right-radius: 2.5rem; 
 }
 
 .k1-image img{
@@ -908,9 +909,8 @@ hr{
     animation: auto1 12s infinite ease-in;
     animation-delay: 4s;
     position: absolute;
-    padding: 1px;
-    border: 0.12rem solid rgba(4, 150, 254, 0.652);
 }
+
 @keyframes auto1{
     0%{left: 100%;}
     4%{left: 0%;}
@@ -925,8 +925,6 @@ hr{
     animation: auto2 12s infinite ease-in;
     animation-delay: 12s;
     position: absolute;
-    padding: 1px;
-    border: 0.12rem solid rgba(4, 150, 254, 0.652);
 }
 @keyframes auto2{
     0%{left: 100%;}
@@ -942,8 +940,6 @@ hr{
     animation: auto3 12s infinite ease-in;
     animation-delay: 8s;
     position: absolute;
-    padding: 1px;
-    border: 0.12rem solid rgba(4, 150, 254, 0.652);
 }
 
 @keyframes auto3{
@@ -968,8 +964,6 @@ hr{
     padding: 25px;
 }
 .k1 img{
-  padding: 5px;
-  border: 0.12rem solid rgba(4, 150, 254, 0.652);
   background: #fffffffb;
 }
 
