--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         width: 100%;
         height: 0.1rem;
         word-spacing: 1px;
-        border-bottom: 0.3rem solid rgba(20, 120, 174, 0.996);
+        border-bottom: 0.2rem solid rgba(20, 120, 174, 0.996);
     }
 
     .Translator{
@@ -75,7 +75,7 @@
       height: 1.5rem;
       font-family: georgia;
       font-size: 15px;
-      color: #e9e9e9f8;
+      color: #000;
       padding: 5px;
       margin-top: -1rem;
     }
@@ -95,7 +95,7 @@
       height: 1.5rem;
       font-family: georgia;
       font-size: 15px;
-      color: #e9e9e9f8;
+      color: #000;
       padding: 5px;
       margin-top: -1rem;
     }
@@ -116,7 +116,7 @@
       height: 1.5rem;
       font-family: georgia;
       font-size: 15px;
-      color: #e9e9e9f8;
+      color: #000;
       padding: 5px;
       margin-top: -1rem;
     }
@@ -137,7 +137,7 @@
       height: 1.5rem;
       font-family: georgia;
       font-size: 15px;
-      color: #e9e9e9f8;
+      color: #000;
       padding: 5px;
       margin-top: -1rem;
     }
@@ -154,7 +154,7 @@
       grid-template-rows: 0.4fr 0.5fr 0.5fr 0.5fr;
                  justify-content: center;
                  justify-items: center;
-                 background: #c01c55fe;
+                 background: #fff;
                  width: 100%;
                  height: 94px;
                  object-fit: cover;
@@ -162,7 +162,7 @@
                  top: 0;
                  position: sticky;
                  border-bottom: 0.44rem solid rgba(21, 44, 137, 0.911);
-                 box-shadow: 0 2px 0.9rem 0.11px rgba(5, 22, 59, 0.991);
+                 box-shadow: 0 1px 0.5rem 0.1px rgba(6, 25, 66, 0.991);
                  
           }
 
@@ -247,8 +247,8 @@
           }
 
           .myDiv1:hover{
-      border-bottom: 0.8rem solid chartreuse;
-      color: chartreuse;
+      border-bottom: 0.8rem solid rgb(116, 232, 0);
+      color: rgb(116, 232, 0);
       transition: 0.15s ease-in;
           }
 
@@ -267,8 +267,8 @@
           }
 
           .myDiv2:hover{
-            border-bottom: 0.8rem solid #fff;
-      color: #fff;
+            border-bottom: 0.8rem solid purple;
+      color: purple;
       transition: 0.15s ease-in;
           }
 
@@ -327,8 +327,8 @@
           }
 
           .myDiv6:hover{
-            border-bottom: 0.8rem solid yellow;
-      color: yellow;
+            border-bottom: 0.8rem solid gold;
+      color: gold;
       transition: 0.15s ease-in;
           }
 
