--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
                  top: 0;
                  position: sticky;
                  border-bottom: 0.5rem solid rgba(1, 149, 255, 0.914);
-                 box-shadow: 0 1px 0.6rem 0.1px rgba(2, 147, 225, 0.915);
-                 
+                 box-shadow: 0 1px 0.6rem 0.1px rgba(2, 147, 225, 0.915); 
           }
+
 
           .TYK1{
   display: flex;
@@ -221,13 +221,13 @@
             font-size: 19px;
             height: 40px;
             width: 100%;
-            color: rgb(16, 183, 255);
+            color: rgb(16, 177, 246);
             background: transparent;
           }
 
           .myDiv:hover{
-            border-bottom: 0.8rem solid rgb(16, 183, 255);
-            color: rgb(16, 183, 255);
+            border-bottom: 0.8rem solid rgb(16, 177, 246);
+            color: rgb(16, 177, 246);
             transition: 0.15s ease-in;
       
           }
@@ -242,7 +242,7 @@
             font-size: 19px;
             cursor: pointer;
             font-family: georgia;
-            color: rgb(16, 183, 255);
+            color: rgb(16, 177, 246);
             background: transparent;
           }
 
@@ -262,7 +262,7 @@
             font-size: 19px;
             cursor: pointer;
             font-family: georgia;
-            color: rgb(16, 183, 255);
+            color: rgb(16, 177, 246);
             background: transparent;
           }
 
@@ -282,7 +282,7 @@
             font-size: 19px;
             cursor: pointer;
             font-family: georgia;
-            color: rgb(16, 183, 255);
+            color: rgb(16, 177, 246);
             background: transparent;
           }
 
@@ -302,7 +302,7 @@
             font-size: 19px;
             cursor: pointer;
             font-family: georgia;
-            color: rgb(16, 183, 255);
+            color: rgb(16, 177, 246);
             background: transparent;
           }
 
@@ -322,7 +322,7 @@
             font-size: 19px;
             cursor: pointer;
             font-family: georgia;
-            color: rgb(16, 183, 255);
+            color: rgb(16, 177, 246);
             background: transparent;
           }
 
@@ -852,7 +852,7 @@ hr{
     flex-direction: column;
     justify-content: center;
     align-items: left;
-    background: #f1f1f1f1;
+    background: #ebebebed;
     width: 93%;
     height: auto;
     font-family: 'helvetica';
@@ -1332,10 +1332,10 @@ certain autonomy or semi-autonomy in the future. These are crucial goals Tiki N'
       </strong>
     </span>
 <br>
-<br>Given the appalant reality highlighted by the lack of fundemental infrastrures cited above, it's obvious they experience social discriminations on a daily basis and the government has done few things to help them. Depending the area they're living, few has a chance to attend school and may dream in the future. 
+<br>Given the appalant reality highlighted by the lack of fundamental handi-infrastructures cited above, it's obvious their lives are not getting easier untill they still experience social discriminations on a daily basis. Corrupted governments have done few things to help them in terms of giving a monthly paycheck to those who can't work. Depending the region where they're living, few will attend school and may dream in the future. 
         <br><br>
-        It's easy for some people to make kids but very heavy in terms of the responsabilities. When it's kids with disabilities that's more harder and that's why Tiki N'Yiki has been founded to help solve some of those issues. The issues are diverse, thoughest  
-        at a different level but are also challengeable and the society has tools to come to end exclusion toward difference everywhere and especially in Burkina Faso. Meanwhile it can look like unthinkable the fact to see many disabled not being able to go to hospital or to a care centre because not having the possibiltiy. No car, no moto, no 
+        It's easy for some people to make kids but very heavy in terms of facing responsabilities. When it's about kids with disabilities that seems to be more harder and that's why Tiki N'Yiki focuses to figure out those issues. Issues are diverse, thoughest  
+        at different level but also challengeable and the society has what it need to tackle the issue and then come to conclusion with the end of exclusion and a true rebirth of inclusion towards diffrently-able people everywhere and especially in Burkina Faso. Meanwhile it can look like unthinkable the fact to see many disabled not being able to go to hospital or to a care centre because not having the possibiltiy. No car, no moto, no 
         bike and being disabled and living in a remote area where it's rare to regularly transportation. It's rural. So based on those facts Tiki N'Yiki would define, implement and facilitate lives to many of those disabled people including kids who're living in deep villages in Burkina Faso. The project would found tricycles (A three weels cycle for 
         disabled people) to help them hanging out where they need to. There are obviously education, health care, food security and climate change challenges. 
         Because of the insufficience of adapetd infractrustures and services, schools or hospitals, Tiki N'Yiki plans to build a multi-service and adapted centre (With a medical centre where some volunteers, all around the world, can offer their carrying services) to disabled people especially children and orphans and also the local population. 
