--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.5rem solid rgba(1, 149, 255, 0.914);
-                 box-shadow: 0 1px 0.6rem 0.1px rgba(2, 147, 225, 0.915); 
+                 border-bottom: 0.5rem solid rgba(2, 144, 246, 0.919);
+                 box-shadow: 0 1px 0.7rem 0.1px rgba(2, 151, 244, 0.968); 
           }
 
 
@@ -226,8 +226,8 @@
           }
 
           .myDiv:hover{
-            border-bottom: 0.8rem solid rgb(16, 177, 246);
-            color: rgb(16, 177, 246);
+            border-bottom: 0.8rem solid red;
+            color: red;
             transition: 0.15s ease-in;
       
           }
@@ -247,8 +247,8 @@
           }
 
           .myDiv1:hover{
-      border-bottom: 0.8rem solid rgb(116, 232, 0);
-      color: rgb(116, 232, 0);
+      border-bottom: 0.8rem solid rgba(16, 133, 25, 0.95);
+      color: rgba(16, 133, 25, 0.95);
       transition: 0.15s ease-in;
           }
 
@@ -327,8 +327,8 @@
           }
 
           .myDiv6:hover{
-            border-bottom: 0.8rem solid gold;
-      color: gold;
+            border-bottom: 0.8rem solid rgba(238, 202, 0, 0.984);
+      color: rgba(238, 202, 0, 0.984);
       transition: 0.15s ease-in;
           }
 
@@ -852,15 +852,15 @@ hr{
     flex-direction: column;
     justify-content: center;
     align-items: left;
-    background: #ebebebed;
-    width: 93%;
+    background: #f1f1f1f1;
+    width: 92.72%;
     height: auto;
     font-family: 'helvetica';
     color: rgb(56, 56, 56);
     font-size: 17.5px;
     line-height: 26px;
     text-align: left;
-    padding: 3rem;
+    padding: 4rem;
     border-bottom-left-radius: 1.5rem;
     border-bottom-right-radius: 1.5rem;
 }
