--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-                                                       <!DOCTYPE html>
+                                                       <          <!DOCTYPE html>
           <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
           <head>
               <meta charset="UTF-8">
@@ -1433,7 +1433,7 @@
                     </strong>
                   </span>
                   <p>
-                    <br>While some people are trying food to trashes somewhere around the workd we do knoe also that there are many others who are starving. It is a serious matter Tiki N'Yiki want to deal with by allowing a food program to help for disabled students
+                    <br>While some people are trying food to trashes somewhere around the world, we also do know there are many other people who are starving. It is a serious matter Tiki N'Yiki want to deal with by allowing a food program to help for disabled students
                   </p>
                   <img src="https://www.zupimages.net/up/22/51/99tx.jpg" alt="Food to be shared">
                   <figure>
