--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-                                                       <          <!DOCTYPE html>
+          <!DOCTYPE html>
           <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
           <head>
               <meta charset="UTF-8">
@@ -866,6 +866,8 @@
               padding: 3rem;
               border-bottom-left-radius: 1.5rem;
               border-bottom-right-radius: 1.5rem;
+              border-right: 0.15rem solid #08cafbf0;
+              border-left: 0.15rem solid #08cafbf0;
           }
           .content1 a:hover{
               color: red;
@@ -1415,7 +1417,7 @@
                   </span>
               
                   <p>
-                    <br>Health Care Matters For Everyone. But how  can the people with low or any income can afford health care when it trends to be a money affair everywhere ?
+                    <br>Health Care Matters For Everyone. But how can the people with low or any income afford their medical treatments when being ill given that health care is trending to be a money affair everywhere ?
                   </p>
                     <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="Regional Administrative Facility For The Health Minister">
                   <figure>
