--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-                                      <!DOCTYPE html>
+                                         <!DOCTYPE html>
           <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
           <head>
               <meta charset="UTF-8">
@@ -1309,7 +1309,7 @@
                    <br>
                    <img src="https://www.worldatlas.com/upload/5d/10/8c/bf-01.jpg" alt="Map of Burkina Faso">
                    <figure>
-                    <figcaption style=" color:rgb(103, 103, 103); font-family: 'verdana'; font-size: 15px; text-align: left;">The Map of Burkina Faso is red and in West Africa</figcaption>
+                    <figcaption style=" color:rgb(103, 103, 103); font-family: 'verdana'; font-size: 15px; text-align: left;">The Map of Burkina Faso in West Africa</figcaption>
                     </figure>
                    They have to take their rights in count and in hands including to live decently even the disability. Inclusion for disabled children is still stammering worldwide but especially around Africa.
                   There is a big concern about understanding, accepting, socially including and helping people with disabilities. 
