--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-                                         <!DOCTYPE html>
+                                          <!DOCTYPE html>
           <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
           <head>
               <meta charset="UTF-8">
@@ -1307,7 +1307,7 @@
                    How much time disabled people have to struggle more, wait so long and may get their needs met ? Countles time. It shouldn't. 
                    <br>
                    <br>
-                   <img src="https://www.worldatlas.com/upload/5d/10/8c/bf-01.jpg" alt="Map of Burkina Faso">
+                   <img src="https://cdn.britannica.com/59/69759-004-5F796977/Burkina-Faso-map.jpg?w=740&h=416&c=crop" alt="Map of Burkina Faso">
                    <figure>
                     <figcaption style=" color:rgb(103, 103, 103); font-family: 'verdana'; font-size: 15px; text-align: left;">The Map of Burkina Faso in West Africa</figcaption>
                     </figure>
