--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-                       <!DOCTYPE html>
+                      <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
     <meta charset="UTF-8">
@@ -561,10 +561,10 @@ hr{
     text-align: left;
     width: 73.25%;
     height: auto;
-    font-family: Helvetica;
-    font-size: 17.49px;
+    font-family: 'georgia';
+    font-size: 18.5px;
+    color: rgba(87, 87, 87, 0.956);
     line-height: 24.5px;
-    color: #222222f4;
     padding: 10px;
   
 }
@@ -592,10 +592,10 @@ hr{
     text-align: left;
     width: 100%;
     height: 150px;
-    font-family: Helvetica;
-    font-size: 17.49px;
+    font-family: 'georgia';
     line-height: 24.5px;
-    color: #222222f4;
+    font-size: 18.5px;
+    color: rgba(87, 87, 87, 0.956);
     margin-top: -1rem;
 }
 
