--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     <b style="color: green">C. Des activités d'éducation-sensibilisation</b> sur le HANDICAP et l'inclusion.
     <br>
     <br>
-    <b style="color: green">D. D'un programme financier constitué de bourses d'étude</b> pour soutenir les étudiant-es handicapé-es excellent-es et méritant.
+    <b style="color: green">D. D'un programme financier constitué de bourses d'étude</b> pour soutenir les étudiant-es handicapé-es excellent-es.
      </p>
 
     
